extract/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### deny any 3306 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3306 -j DROP
-A ufw-user-input -p udp --dport 3306 -j DROP

### tuple ### deny any 9200 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9200 -j DROP
-A ufw-user-input -p udp --dport 9200 -j DROP

### tuple ### deny any 27017 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 27017 -j DROP
-A ufw-user-input -p udp --dport 27017 -j DROP

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 9000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9000 -j ACCEPT
-A ufw-user-input -p udp --dport 9000 -j ACCEPT

### tuple ### deny any 9300 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9300 -j DROP
-A ufw-user-input -p udp --dport 9300 -j DROP

### tuple ### deny any 6379 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 6379 -j DROP
-A ufw-user-input -p udp --dport 6379 -j DROP

### tuple ### deny any 33060 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 33060 -j DROP
-A ufw-user-input -p udp --dport 33060 -j DROP

### tuple ### allow any 1514 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1514 -j ACCEPT
-A ufw-user-input -p udp --dport 1514 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
