extract/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### deny any 3306 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 3306 -j DROP
-A ufw6-user-input -p udp --dport 3306 -j DROP

### tuple ### deny any 9200 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 9200 -j DROP
-A ufw6-user-input -p udp --dport 9200 -j DROP

### tuple ### deny any 27017 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 27017 -j DROP
-A ufw6-user-input -p udp --dport 27017 -j DROP

### tuple ### allow any 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -j ACCEPT
-A ufw6-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 80 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT
-A ufw6-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 443 -j ACCEPT
-A ufw6-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 9000 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 9000 -j ACCEPT
-A ufw6-user-input -p udp --dport 9000 -j ACCEPT

### tuple ### deny any 9300 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 9300 -j DROP
-A ufw6-user-input -p udp --dport 9300 -j DROP

### tuple ### deny any 6379 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 6379 -j DROP
-A ufw6-user-input -p udp --dport 6379 -j DROP

### tuple ### deny any 33060 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 33060 -j DROP
-A ufw6-user-input -p udp --dport 33060 -j DROP

### tuple ### allow any 1514 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 1514 -j ACCEPT
-A ufw6-user-input -p udp --dport 1514 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
